Move team message to top, misc fixes to backstretch placement, etc

--- a/wp-content/themes/hmr-theme/assets/css/less/app.less
+++ b/wp-content/themes/hmr-theme/assets/css/less/app.less
@@ -12,6 +12,12 @@
 	.transition-duration(0);
 }
 
+.backstretch {
+	img {
+		top:0 !important;
+	}
+}
+
 /* ==========================================================================
    Bootstrap & Stock Bootstrap/Roots Theme Setup
    ========================================================================== */
@@ -96,6 +102,19 @@
 		font-weight:200;
 		text-transform:uppercase;
 		margin:.75em 0 1em 0;
+	}
+}
+
+.bgWrapper {
+	overflow:hidden;
+	height:100%;
+	min-height:100%;
+	.bgClear {
+		clear:both;
+		position:fixed;
+		bottom:0;
+		with:100%;
+		height:1px;
 	}
 }
 
