--- a/wp-content/themes/hmr-theme/assets/css/less/views/team.less
+++ b/wp-content/themes/hmr-theme/assets/css/less/views/team.less
@@ -1,6 +1,6 @@
 .post-type-archive-team {
 	.rollover {
-		margin: -1.5em 0 1em 0;
+		margin: 0 0 -1em 0;
 		font-size: 13px;
 		text-transform: uppercase;
 	}
@@ -242,6 +242,12 @@
 	#wrap {
 		max-height:100%;
 		height:100%;
+	}
+	.single-team {
+		#wrap {
+			height:auto;
+			max-height:99999px;
+		}
 	}
 }
 
